--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,40 @@
-name: 'Composite Run Steps Action Template'
+name: 'App Pool Action'
 
-description: 'Add description here'
+description: 'This action gets the status an On-Prem IIS website'
 
 inputs:
-  input-1:
-    description: 'Add a description here'
+  server:
+    description: 'The name of the target server'
+    required: true
+  website-name:
+    description: 'The name of the website to perform action on'
+    required: true
+  service-account-id:
+    description: 'The service account name'
+    required: true
+  service-account-password:
+    description: 'The service account password'
+    required: true
+  server-public-key:
+    description: 'Path to remote server public ssl key'
     required: true
 
 outputs:
-  output-1:
-    description: 'Add description here'
-    value: '${{ steps.step_1.outputs.world }}'
+  website-status:
+    description: 'The status of the website'
+    value: ${{ steps.action.outputs.website-status }}
 
 runs:
   using: 'composite'
   steps:
-    - name: Step 1
-      id: step_1
-      shell: bash
+    - name: Action
+      id: action
+      shell: powershell
       run: |
-        echo "::set-output name=hello::world"
+        $secure_password = ConvertTo-SecureString -String ${{ inputs.service-account-password }} -AsPlainText -Force
+        ${{ github.action_path }}/iis_action.ps1 `
+          -server '${{ inputs.server }}' `
+          -website_name '${{ inputs.website-name }}' `
+          -user_id '${{ inputs.service-account-id }}' `
+          -password $secure_password `
+          -cert_path '${{ inputs.server-public-key }}'
