--- a/action.yml
+++ b/action.yml
@@ -15,9 +15,10 @@ inputs:
   service-account-password:
     description: 'The service account password'
     required: true
-  server-public-key:
-    description: 'Path to remote server public ssl key'
-    required: true
+  server-cert-path:
+    description: 'Path to remote server public ssl cert'
+    required: false
+    default: ''
 
 outputs:
   website-status:
@@ -31,10 +32,10 @@ runs:
       id: action
       shell: powershell
       run: |
-        $secure_password = ConvertTo-SecureString -String ${{ inputs.service-account-password }} -AsPlainText -Force
+        $secure_password = ConvertTo-SecureString -String "${{ inputs.service-account-password }}" -AsPlainText -Force
         ${{ github.action_path }}/iis_action.ps1 `
           -server '${{ inputs.server }}' `
           -website_name '${{ inputs.website-name }}' `
           -user_id '${{ inputs.service-account-id }}' `
           -password $secure_password `
-          -cert_path '${{ inputs.server-public-key }}'
+          -cert_path '${{ inputs.server-cert-path }}'
