Removed cert path spec

--- a/action.yml
+++ b/action.yml
@@ -15,10 +15,6 @@ inputs:
   service-account-password:
     description: 'The service account password'
     required: true
-  server-cert-path:
-    description: 'Path to remote server public ssl cert, only necessary if the cert is not already installed on the actions runner'
-    required: false
-    default: ''
 
 outputs:
   website-status:
@@ -37,5 +33,4 @@ runs:
           -server '${{ inputs.server }}' `
           -website_name '${{ inputs.website-name }}' `
           -user_id '${{ inputs.service-account-id }}' `
-          -password $secure_password `
-          -cert_path '${{ inputs.server-cert-path }}'
+          -password $secure_password
