Bug Fix: Complex Password Quote

--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ runs:
       id: action
       shell: powershell
       run: |
-        $secure_password = ConvertTo-SecureString -String "${{ inputs.service-account-password }}" -AsPlainText -Force
+        $secure_password = ConvertTo-SecureString -String '${{ inputs.service-account-password }}' -AsPlainText -Force
         ${{ github.action_path }}/iis_action.ps1 `
           -server '${{ inputs.server }}' `
           -website_name '${{ inputs.website-name }}' `
